<resources>

    <string name="app_name">HomeLife</string>
    <string name="textview1">Recepción HomeLife</string>
    <string name="textview2">Oficina Administración</string>
    <string name="textview3">Presidente junta de propietarios</string>
    <string name="textview4">WhatsApp HomeLife</string>
    <string name="TextRecepcion">+51 14215060</string>
    <string name="TextAdministracion">+51 14215070</string>
    <string name="TextJunPro">+51 994018970</string>
    <string name="TextWhastsApp">+51 986532147</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="spinner_title" />
    <string name="title_activity_main2">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string-array name="ambiente_array">
        <item>Terraza</item>
        <item>Parrilla </item>
        <item>Cancha de Futbol</item>
        <item>Piscina </item>
    </string-array>

</resources>